<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gamefrag_lo_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".GameFragment">

        <Button
            android:id="@+id/gamefrag_bt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/gamefrag_bt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/gamefrag_bt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/gamefrag_bt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/gamefrag_bt5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/gamefrag_bt6"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamefrag_bt1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/gamefrag_bt6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/gamefrag_bt3"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamefrag_bt5" />

        <Button
            android:id="@+id/gamefrag_bt7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/gamefrag_bt4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/gamefrag_bt8"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/gamefrag_bt8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:text="@string/click_btn"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/gamefrag_bt7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/gamefrag_bt2" />

        <TextView
            android:id="@+id/gamefrag_tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gamefrag_tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:fontFamily="monospace"
            android:text="@string/zero_score"
            android:textColor="@color/purple_700"
            android:textSize="72sp"
            app:layout_constraintBottom_toTopOf="@+id/gamefrag_tv_timer"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>